NetworkPolicies/basics2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netz2
  labels:
    name: netzname
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blau
  namespace: netz
  labels:
    farbe: blau
spec:
  replicas: 1
  selector:
    matchLabels:
      farbe: blau
  template:
    metadata:
      labels:
        farbe: blau
    spec:
      containers:
      - name: lala
        image: erkules/nginxhostname
---
apiVersion: v1
kind: Service
metadata:
  name: blau
  namespace: netz
spec:
  selector:
    farbe: blau
  ports:
  - port: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lila
  namespace: netz
  labels:
    farbe: lila
spec:
  replicas: 1
  selector:
    matchLabels:
      farbe: lila
  template:
    metadata:
      labels:
        farbe: lila
    spec:
      containers:
      - name: lala
        image: erkules/nginxhostname
---
apiVersion: v1
kind: Service
metadata:
  name: lila
  namespace: netz
spec:
  selector:
    farbe: lila
  ports:
  - port: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rot
  namespace: netz
  labels:
    farbe: rot
spec:
  replicas: 1
  selector:
    matchLabels:
      farbe: rot
  template:
    metadata:
      labels:
        farbe: rot
    spec:
      containers:
      - name: lala
        image: erkules/nginxhostname
---
apiVersion: v1
kind: Service
metadata:
  name: rot
  namespace: netz
spec:
  selector:
    farbe: rot
  ports:
  - port: 80
---
