NetworkPolicies/deny-all-pods.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-pods
  namespace: netz
spec:
  podSelector: {}
  policyTypes:
  - Ingress
    #  ingress:
    #  - from:
    #    - podSelector: {}
