NetworkPolicies/deny-all-podsIII.yaml
# Nach Lars .. kürzer geht nicht
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-pods
  namespace: netz
spec:
