NetworkPolicies/dont-leave-the-cluster.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dont-leave-cluster
  namespace: netz
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector: {}
