NetworkPolicies/incommingIP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-ip
  namespace: netz
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 443
          protocol: TCP
      from:
        - ipBlock:
            cidr: 10.5.7.11/32
