NetworkPolicies/pod2pod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tored
  namespace: netz
spec:
  podSelector:
    matchLabels:
      farbe: rot
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          farbe: blau
    ports: 
    - port: 80
